--- a/templates/basic.html
+++ b/templates/basic.html
@@ -7,8 +7,7 @@
 <meta http-equiv="cache-control" content="max-age=604800" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>GreatKart | One of the Biggest Online Shopping Platform</title>
-
+<title>Hardware tools - buy from us in wholesale price</title>
 <link href="{% static 'images/logo.ico' %}" rel="shortcut icon" type="image/x-icon">
 
 <!-- jQuery -->
