--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -13,10 +13,10 @@
 		<ul class="list-group">
 			<a class="list-group-item active" href="#"> My order history </a>
 			<a class="list-group-item" href="#"> Transactions </a>
-			<a class="list-group-item" href="#"> Return and refunds </a>
+<!--			<a class="list-group-item" href="#"> Return and refunds </a>-->
 			<a class="list-group-item" href="#"> Settings </a>
-			<a class="list-group-item" href="#"> My Selling Items </a>
-			<a class="list-group-item" href="#"> Received orders </a>
+<!--			<a class="list-group-item" href="#"> My Selling Items </a>-->
+<!--			<a class="list-group-item" href="#"> Received orders </a>-->
 		</ul>
 		<br>
 		<a class="btn btn-light btn-block" href="{% url 'logout' %}"> <i class="fa fa-power-off"></i> <span class="text">Log out</span> </a>
@@ -32,10 +32,10 @@
 			<div class="row">
 				<div class="col-md-8">
 					<h6 class="text-muted">Delivery to</h6>
-					<p>Michael Jackson <br>
-					Phone +1234567890 Email: myname@pixsellz.com <br>
-			    	Location: Home number, Building name, Street 123,  Tashkent, UZB <br>
-			    	P.O. Box: 100123
+					<p>Name surname <br>
+						phone
+						location
+						other details
 			 		</p>
 				</div>
 				<div class="col-md-4">
