--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,7 @@
 <div class="container">
 
 <div class="intro-banner-wrap">
+	<H1>Online Hardware store for you and your family</H1>
 	<img src="{% static 'images/banners/1 (2).jpg' %}" class="img-fluid rounded">
 </div>
 
@@ -25,7 +26,7 @@
 
 <header class="section-heading">
 	<a href="{% url 'shop' %}" class="btn btn-outline-primary float-right">See all</a>
-	<h3 class="section-title">Popular products</h3>
+	<h3 class="section-title">Most frequently bought from us!</h3>
 </header><!-- sect-heading -->
 
 
