--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -62,14 +62,14 @@
 				<div class="d-flex justify-content-end mb-3 mb-lg-0">
 					{% if user.id is None %}
 					<div class="widget-header">
-						<small class="title text-muted">Welcome guest!</small>
+						<small class="title text-muted">Welcome to our store, user!</small>
 						<div>
-							<a href="{% url 'login' %}">Sign in</a> <span class="dark-transp"> | </span>
+							<a href="{% url 'login' %}">Sign in</a> <span class="dark-transp"> / </span>
 							<a href="{% url 'register' %}"> Register</a>
 						</div>
 					{% else %}
 					<div class="widget-header">
-						<small class="title text-muted">Welcome {{user.name}}!</small>
+						<small class="title text-muted">Welcome back, {{user.name}}!</small>
 						<div>
 							<a href="{% url 'dashboard' %}">Dashboard</a> <span class="dark-transp"> | </span>
 							<a href="{% url 'logout' %}"> Logout</a>
