--- a/templates/shop/cart.html
+++ b/templates/shop/cart.html
@@ -10,10 +10,10 @@
 
 <!-- ============================ COMPONENT 1 ================================= -->
 {% if not cart_items %}
-	<h2 class="text-center">Your Shopping Cart is Empty</h2>
+	<h2 class="text-center">Cart is empty, please add items from the store to buy.</h2>
 	<br>
 	<div class="text-center">
-		<a href="{% url 'shop' %}" class="btn btn-primary">Continue Shopping</a>
+		<a href="{% url 'shop' %}" class="btn btn-primary">Continue shopping</a>
 	</div>
 {% else %}
 <div class="row">
@@ -52,16 +52,16 @@
 					<div class="col">
 						<div class="input-group input-spinner">
 							<div class="input-group-prepend">
-							<a href="{%url 'item_removed_from_cart' cart_item.item.id%}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
+							<a href="{%url 'item_removed_from_cart' cart_item.item.id cart_item.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
 							</div>
 							<input type="text" class="form-control"  value="{{ cart_item.cart_quantity }}">
 							<div class="input-group-append">
-								<form action="" method="POST">
+								<form action="{%url 'item_to_cart' cart_item.item.id%}" method="POST">
 									{% csrf_token %}
-									{% for item in cart_item.variations.all %}
-										<input type="hidden" name="{{ item.variation_category | lower }}" value="{{ item.variation_value | capfirst }}">
+									{% for itemm in cart_item.variations.all %}
+										<input type="hidden" name="{{ itemm.variation_category | lower }}" value="{{ itemm.variation_value | capfirst }}">
 									{% endfor %}
-									<a href="{%url 'item_to_cart' cart_item.item.id%}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </a>
+									<button class="btn btn-light" type="submit" id="button-minus"> <i class="fa fa-plus"></i> </button>
 								</form>
 							</div>
 						</div> <!-- input-group.// -->
@@ -74,7 +74,7 @@
 		</div> <!-- price-wrap .// -->
 	</td>
 	<td class="text-right">
-	<a href="{% url 'item_fully_removed' cart_item.item.id %}" onclick="return confirm('Are you sure you want to delete this item?')" class="btn btn-danger"> Remove</a>
+	<a href="{% url 'item_fully_removed' cart_item.item.id  cart_item.id %}" onclick="return confirm('Are you sure you want to delete this item?')" class="btn btn-danger"> Remove item</a>
 	</td>
 </tr>
 {% endfor %}
