--- a/templates/shop/item_detail.html
+++ b/templates/shop/item_detail.html
@@ -7,14 +7,16 @@
 <div class="card">
 	<div class="row no-gutters">
 		<aside class="col-md-6">
-<article class="gallery-wrap">
-	<div class="img-big-wrap">
-	   <a href="#"><img src=".{{ single_product.picture.url }}"></a>
+			<article class="gallery-wrap">
+				<div class="img-big-wrap">
+					<a href="#"><img src=".{{ single_product.picture.url }}"></a>
 	</div> <!-- img-big-wrap.// -->
 
 </article> <!-- gallery-wrap .end// -->
 		</aside>
 		<main class="col-md-6 border-left">
+			<form action="{% url 'item_to_cart' single_product.id %}" method="POST">
+				{% csrf_token %}
 <article class="content-body">
 
 <h2 class="title">{{ single_product.name_item }}</h2>
@@ -30,54 +32,34 @@
 	<div class="row">
 		<div class="item-option-select">
 			<h6>Choose Color</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Silver
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color" > Gray
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color checked"> Gold
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Black
-			  </label>
-			</div>
+			  <select name="color" class="form-control">
+				 <option value="" disabled selected>Select</option>
+				 {% for i in single_product.variation_set.colors %}
+				 <option value="{{ i.variation_value | lower }}">{{ i.variation_value | capfirst }}</option>
+				 {% endfor %}
+			  </select>
 		</div>
 	</div> <!-- row.// -->
 	<div class="row">
-		<div class="item-option-select">
+		<div class="item-option-select" >
 			<h6>Select Size</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> S
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color" checked> M
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> L
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> XL
-			  </label>
-			</div>
+			 <select name="size" class="form-control">
+				 <option value="" disabled selected>Select</option>
+				 {% for i in single_product.variation_set.sizes %}
+				 <option value="{{ i.variation_value | lower }}">{{ i.variation_value | capfirst }}</option>
+				 {% endfor %}
+			</select>
 		</div>
 	</div> <!-- row.// -->
 	<hr>
     {% if single_product.stock_item <= 0 %}
       <h5>Out of stock</h5>
       {% else %}
-	    {% if in_cart %}
-	        <a href="#" class="btn  btn-success"> <span class="text">Added to cart</span> <i class="fas fa-check"></i>  </a>
-	        <a href="{% url 'cart' %}" class="btn  btn-outline-primary"> <span class="text">View cart</span> <i class="fas fa-check"></i>  </a>
-	     {% else %}
-         <a href="{% url 'item_to_cart' single_product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
-         {% endif %}
+         <button type="submit" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </button>
 	{% endif %}
 
 </article> <!-- product-info-aside .// -->
+				</form>
 		</main> <!-- col.// -->
 	</div> <!-- row.// -->
 </div> <!-- card.// -->
@@ -88,28 +70,28 @@
 <div class="row">
 			<div class="col-md-9">
 
-	<header class="section-heading">
-		<h3>Customer Reviews </h3>
+<!--	<header class="section-heading">-->
+<!--		<h3>Customer Reviews </h3>-->
 
-	</header>
+<!--	</header>-->
 
-	<article class="box mb-3">
-		<div class="icontext w-100">
-			<img src="./images/avatars/avatar1.jpg" class="img-xs icon rounded-circle">
-			<div class="text">
-				<span class="date text-muted float-md-right">24.04.2020 </span>
-				<h6 class="mb-1">Mike John </h6>
+<!--	<article class="box mb-3">-->
+<!--		<div class="icontext w-100">-->
+<!--			<img src="./images/avatars/avatar1.jpg" class="img-xs icon rounded-circle">-->
+<!--			<div class="text">-->
+<!--				<span class="date text-muted float-md-right">24.04.2020 </span>-->
+<!--				<h6 class="mb-1">Mike John </h6>-->
 
-			</div>
-		</div> <!-- icontext.// -->
-		<div class="mt-3">
-			<p>
-				Dummy comment Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip
-			</p>
-		</div>
-	</article>
+<!--			</div>-->
+<!--		</div> &lt;!&ndash; icontext.// &ndash;&gt;-->
+<!--		<div class="mt-3">-->
+<!--			<p>-->
+<!--				Dummy comment Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod-->
+<!--				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,-->
+<!--				quis nostrud exercitation ullamco laboris nisi ut aliquip-->
+<!--			</p>-->
+<!--		</div>-->
+<!--	</article>-->
 
 
 
